--- a/index.html
+++ b/index.html
@@ -644,13 +644,13 @@
         let myChart = null; // Store chart instance globally
 
         function shareOnX(name, poop, pee) {
-            const text = encodeURIComponent(`I'm ${name} and I've produced ${Math.round(poop)}kg of poop and ${Math.round(pee)}L of pee in my lifetime! 💩 Calculate yours at PooPeelator.com`);
+            const text = encodeURIComponent(`I'm ${name} and I've produced ${Math.round(poop)}kg of poop and ${Math.round(pee)}L of pee in my lifetime! 💩 Calculate yours at https://dovgonosyk.github.io/poopeelator/`);
             const url = `https://twitter.com/intent/tweet?text=${text}`;
             window.open(url, '_blank', 'width=550,height=420');
         }
 
         function shareOnBluesky(name, poop, pee) {
-            const text = encodeURIComponent(`I'm ${name} and I've produced ${Math.round(poop)}kg of poop and ${Math.round(pee)}L of pee in my lifetime! 💩 Calculate yours at PooPeelator.com`);
+            const text = encodeURIComponent(`I'm ${name} and I've produced ${Math.round(poop)}kg of poop and ${Math.round(pee)}L of pee in my lifetime! 💩 Calculate yours at https://dovgonosyk.github.io/poopeelator/`);
             const url = `https://bsky.app/intent/compose?text=${text}`;
             window.open(url, '_blank', 'width=550,height=420');
         }
