--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
                                 <a href="#" class="donate-btn" onclick="donatePoopAmount(${results.poop}); return false;">
                                     <span>Donate</span>
                                     <span class="donate-amount">₴${Math.round(results.poop)}</span>
-                                    <span>to SaveLife 🇺🇦</span>
+                                    <span>to Come Back Alive 🇺🇦</span>
                                 </a>
                             </div>
                             
